# Silncent_Desk

./: .gitignore  AGENTS.md  CLEANUP_PLAN.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
imgs/: image_audit.py  soft_mist_wallpaper.py
src/: styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  archive.rs  audio.rs  config.rs  file_access.rs  lib.rs  main.rs  shortcuts.rs  wallpaper.rs  weather.rs
src/app/: App.tsx
src/components/MusicBar/: spectrumPhysics.ts
src/modules/ai/: AiPanel.tsx
src/modules/archive/: ArchivePanel.tsx
src/modules/command/: CommandPanel.tsx
src/modules/focus/: FocusStatus.tsx
src/modules/info/: InfoColumn.tsx
src/modules/settings/: SettingsPanel.tsx
src/modules/spectrum/: SpectrumBar.tsx
src/modules/wheel/: FunctionWheel.tsx
